--- a/index.html
+++ b/index.html
@@ -9,5 +9,25 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      window.watsonAssistantChatOptions = {
+        integrationID: "32d42317-37d2-4a80-9f1c-b33198144ed5",
+        region: "us-south",
+        serviceInstanceID: "b7f80f13-1886-4379-adc3-2452b791946c",
+        onLoad: async (instance) => {
+          window.watsonChatInstance = instance;
+          await instance.render(); // CRUCIAL: renderiza o chat
+        },
+      };
+
+      setTimeout(function () {
+        const t = document.createElement("script");
+        t.src =
+          "https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
+          (window.watsonAssistantChatOptions.clientVersion || "latest") +
+          "/WatsonAssistantChatEntry.js";
+        document.head.appendChild(t);
+      });
+    </script>
   </body>
 </html>
